<resources>
    <string name="app_name">Almacen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sistema Integral de Administración</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_new_message_server">Servidor SQL</string>

    <!-- Example settings for Notifications -->
    <string name="pref_title_name">Nombre</string>
    <string name="pref_default_display_server">serverclinicaesperanza.database.windows.net</string>
    <string name="pref_default_display_user">eduardo</string>
    <string name="pref_default_display_password">Integral#2020</string>
    <string name="pref_title_new_message_user">Usuario</string>
    <string name="pref_title_new_message_password">Contraseña</string>

    <string name="Title_fecha">Fecha</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="pref_default_url_actualizacion">http://clinicaesperanza.com.mx/sistemas/tableta/almacen.apk</string>
    <string name="pref_title_url">URL de Actualizacion</string>
    <string name="title_activity_surtir">Surtir</string>
    <string name="title_activity_resumen">Resumen</string>
    <string name="sw_modo_entrega">Entrega</string>
    <string name="sw_modo_surtido">Surtir</string>
    <string name="RecibirSurtido">Recibir Surtido</string>
    <string name="lbl_almacen">Almacen :</string>
    <string name="lbl_fecha">Fecha :</string>
    <string name="lbl_recibirSurtido">Recibir Surtido</string>
    <string name="lbl_usuario">Recibe Usuario :</string>
    <string name="lblcontraseña">Contraseña  (NIP) :</string>
    <string name="btn_valida">Validar usuario</string>
    <string name="btnRecibir">Recibir Pedido</string>
    <string name="lblIdSurtido">Surtido No.:</string>
    <string name="title_activity_consultar">Consultar Surtidos</string>
    <string name="title_activity_captura__inventario">Capturar Inventario</string>
    <string name="Titulo_inventario">Captura de Inventarios</string>
    <string name="lbl_comentarios">Comentarios</string>
    <string name="lbl_existencia">Existencia</string>
    <string name="lbl_fisico">Fisico</string>
    <string name="lbl_Filtrar">Filtrar</string>
    <string name="lbl_descripion">Descripcion</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Seleccionar_fecha">Seleccionar Fecha</string>
    <string name="ver">Ver</string>
    <string name="swSurtido">Surtido</string>
    <string name="swentregado">Entregado</string>
    <string name="title_activity_crearpdf">Crear PDF</string>
    <string name="Texto">Texto</string>
    <string name="textviewlogo">Logo</string>
    <!-- Strings used for fragments for navigation -->
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="title_activity_conteo_diario">Conteo Diario</string>
    <string name="title_activity_pruebas">Pruebas</string>
    <string name="swichFiltro">Ver solo contados</string>
    <string name="conteoDiario">Conteo Diario</string>
    <string name="setings_title_verConfig">Ver Configuracion</string>
    <string name="swAlmacn">Es Almacen :</string>
    <string name="Login">Login</string>
    <string name="Entrar">Entrar</string>
    <string name="Salir">Salir</string>
    <string name="NombreUsuarios">Nombre de Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="sqlUsuario">sa</string>
    <string name="preference_file_key">variables</string>
    <string name="Turno">Turno</string>
    <string name="logo">logo</string>
    <string name="Imagen">Imagen</string>
    <string name="a">#</string>
    <string name="Area">Area</string>
    <string name="textview"></string>
    <string name="todos">Todos</string>
    <string name="swConMovimiento">Con Movimiento</string>
    <string name="Faltantes">Faltantes</string>
    <string name="TurnoRecibe">Turno que Recibe :</string>
    <string name="TurnoEntrega">Turno que entrega :</string>
    <string name="Diferencias">Diferencias</string>
    <string name="Revisar">Revisar</string>
    <string name="precaptura">Precaptura</string>

</resources>
