<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="nombre"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_name" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_server"
        android:inputType="textCapWords"
        android:key="servidor_sql"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_new_message_server" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_user"
        android:inputType="textCapWords"
        android:key="usuario"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_new_message_user" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_password"
        android:inputType="textCapWords"
        android:key="password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_new_message_password" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_url_actualizacion"
        android:key="url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:title="@string/pref_title_url" />



</PreferenceScreen>
