<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvConteo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:visibility="visible">

    <TextView
        android:id="@+id/tv_conteo_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/Texto"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="@dimen/itemconteo"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/Title_fecha"
        android:textColor="@android:color/secondary_text_light_nodisable"
        android:textSize="@dimen/itemconteo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Title_fecha" />

    <ListView
        android:id="@+id/lvConteoDiario"
        android:layout_width="0dp"
        android:layout_height="900dp"
        android:layout_marginBottom="76dp"
        android:background="#95FBF1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/swfiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/swConMovimiento"
        android:textOff="@string/todos"
        android:textSize="@dimen/itemconteo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/swichFiltro" />

    <TextView
        android:id="@+id/tvUsuarioCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/Area"
        android:textColor="@android:color/secondary_text_light_nodisable"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="@string/Area" />

    <TextView
        android:id="@+id/tvConteoArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textColor="@android:color/primary_text_light_nodisable"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/tv_conteo_fecha" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/TurnoEntrega"
        android:textColor="@android:color/secondary_text_light_nodisable"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/tvConteoArea"
        app:layout_constraintTop_toBottomOf="@+id/tv_conteo_fecha"
        tools:text="@string/TurnoEntrega"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ButtonConteoFaltantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/Diferencias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvConteoDiario" />

    <TextView
        android:id="@+id/tvConteoTurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:text="@string/textview"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_precaptura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/precaptura"
        app:layout_constraintBottom_toBottomOf="@+id/ButtonConteoFaltantes"
        app:layout_constraintStart_toEndOf="@+id/ButtonConteoFaltantes" />
</android.support.constraint.ConstraintLayout>