<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="374dp"
        android:layout_height="113dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoesperanza" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/et_login_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/NombreUsuarios"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/et_login_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_usuario" />

    <Spinner
        android:id="@+id/spLoginArea"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="397dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="52dp"
        android:background="@color/blanco"
        android:dropDownWidth="wrap_content"
        android:focusableInTouchMode="true"
        android:minWidth="@dimen/ComboValue"
        android:spinnerMode="dialog"
        android:textColor="@android:color/background_light"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/etTurno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_pw"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_login_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTurno" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="277dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:labelFor="@id/etTurno"
        android:text="@string/TurnoEntrega"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/spLoginArea"
        app:layout_constraintTop_toBottomOf="@+id/spLoginArea"
        tools:text="@string/TurnoEntrega" />

    <EditText
        android:id="@+id/etTurno"
        android:layout_width="92dp"
        android:layout_height="51dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/spLoginArea"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/spLoginArea" />

    <Button
        android:id="@+id/btn_login_revision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Revisar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_entrar" />

</android.support.constraint.ConstraintLayout>